tester/testsuite/extensions/arrays1/bad/bad001.jl
/* index not of integer type */

void main() {
	int[] array = new int[10];
	printInt(array["x"]);
}
